[gd_scene load_steps=10 format=2]

[ext_resource path="res://UIElements/Cover.png" type="Texture" id=1]
[ext_resource path="res://UIElements/Health.png" type="Texture" id=2]
[ext_resource path="res://UIElements/Damage.png" type="Texture" id=3]
[ext_resource path="res://Scripts/HealthBar.gd" type="Script" id=4]
[ext_resource path="res://UIElements/Base Bar.png" type="Texture" id=5]
[ext_resource path="res://Fonts/pixelart.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
resource_name = "Health Change"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("HealthLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HealthBar:tint_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.902344, 0.881195, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0.901961, 0.882353, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HealthLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HealthBar:tint_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="HealthGUI" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
caution_color = Color( 1, 0.65098, 0, 1 )

[node name="HealthBarUnder" type="TextureProgress" parent="Control"]
margin_left = 20.0
margin_top = 10.0
margin_right = 120.0
margin_bottom = 42.0
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )

[node name="HealthBar" type="TextureProgress" parent="Control"]
margin_left = 20.0
margin_top = 10.0
margin_right = 120.0
margin_bottom = 42.0
value = 100.0
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 2 )

[node name="HealthLabel" type="Label" parent="Control"]
margin_left = 92.0
margin_top = 20.0
margin_right = 115.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1

[node name="Tween" type="Tween" parent="Control"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
"anims/Health Change" = SubResource( 2 )
anims/RESET = SubResource( 3 )
